<resources>
    <string name="app_name">BasicApp</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_layout">Change layout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_mark_all_played">Mark all played</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_unsubscribe">Unsubscribe</string>

    <string name="menu_filter_all">All</string>
    <string name="menu_filter_queue">Queue</string>
    <string name="menu_filter_inbox">Inbox</string>
    <string name="menu_filter_starred">Starred</string>
    <string name="menu_filter_history">History</string>

    <string name="liststate_loading">Loading…</string>
    <string name="liststate_error">Loading error</string>
    <string name="liststate_empty">No data</string>
    <string name="liststate_loading_more">Loading more…</string>
    <string name="liststate_no_more">No more data</string>

    <string name="button_play_episode">Play episode</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="button_unsubscribe">Unsubscribe</string>
    <string name="button_retry">Retry</string>

    <string name="category_all">All categories</string>
    <string name="category_arts">Arts</string>
    <string name="category_comedy">Comedy</string>
    <string name="category_education">Education</string>
    <string name="category_kids">Kids &amp; Family</string>
    <string name="category_health">Health</string>
    <string name="category_tv">TV &amp; film</string>
    <string name="category_music">Music</string>
    <string name="category_news">News &amp; politics</string>
    <string name="category_religion">Religion &amp; spirituality</string>
    <string name="category_science">Science &amp; medecine</string>
    <string name="category_sports">Sports &amp; recreation</string>
    <string name="category_technology">Technology</string>
    <string name="category_business">Business</string>
    <string name="category_games">Games &amp; hobbies</string>
    <string name="category_society">Society &amp; culture</string>
    <string name="category_government">Goverment &amp; organizations</string>

    <string name="timestamp_today">today</string>
    <string name="timestamp_yesterday">yesterday</string>
    <string name="timestamp_lastweek">last week</string>
    <string name="timestamp_thismonth">this month</string>
    <string name="timestamp_lastmonth">last month</string>

    <string name="action_add_to_inbox">Add to Inbox</string>
    <string name="action_queue_next">Queue Next</string>
    <string name="action_queue_last">Queue Last</string>
    <string name="action_archive">Archive</string>
    <string name="action_favorite">Add to favorites</string>

    <string name="label_previous">Previous</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_next">Next</string>
    <string name="label_forward">Forward 30 seconds</string>
    <string name="label_rewind">Rewind 30 seconds</string>
    <string name="label_display_all">Display all</string>

    <string name="queue">Queue</string>
    <string name="inbox">Inbox</string>
    <string name="podcasts">Podcasts</string>
    <string name="catalog">Catalog</string>
    <string name="starred">Starred</string>
    <string name="history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="twenty_minutes">20 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="forty_five_minutes">45 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="do_not_stop">Do not stop</string>

    <string name="label_all">All</string>
    <string name="label_about_this_podcast">About this podcast</string>
    <string name="label_episodes">Episodes</string>
    <string name="label_explore">Explore</string>
    <string name="label_podcasts">Podcasts</string>

    <string name="artwork_format_fa">fa</string>
    <string name="artwork_format_fb">fb</string>
    <string name="artwork_format_ff">ff</string>

    <string name="concat_separator"><![CDATA[<font color="#FF8000">%1$s</font> %2$s]]></string>

    <string name="imageTransition">full_image</string>
</resources>